--- a/style.css
+++ b/style.css
@@ -4,10 +4,86 @@
 
 body{
     background-color: black;
+    color: white;
 }
+
+header{
+    z-index: 10;
+    height: 64px;
+    position: relative;
+    background-color: #333;
+    width: 100%;
+    text-align: center;
+    z-index: 2;
+    box-shadow: 20px 0px 100px 0px rgba(0, 0, 0, 0.25);
+}
+
+
+ul {
+    overflow: hidden;
+    list-style: none;
+    margin: auto;
+    z-index: 20;
+}
+ 
+ul li {
+  display: inline-block;
+  padding: 26px 10px 20px 10px;
+}
+
+.ap a{
+    color: white;
+    text-transform: uppercase;
+}
+
+.btn4{
+    text-transform: uppercase;
+    text-align: center;
+    position: relative;
+    text-decoration: none;
+    display:inline-block;
+  }
+  
+  .btn4::before {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    left: 0px;
+    width: 100%;
+    height: 2px;
+    background: #3367ff;
+    display: block;
+    -webkit-transform-origin: right top;
+    -ms-transform-origin: right top;
+    transform-origin: right top;
+    -webkit-transform: scale(0, 1);
+    -ms-transform: scale(0, 1);
+    transform: scale(0, 1);
+    -webkit-transition: transform 0.4s cubic-bezier(1, 0, 0, 1);
+    transition: transform 0.4s cubic-bezier(1, 0, 0, 1)
+  }
+  .btn4:hover::before {
+    -webkit-transform-origin: left top;
+    -ms-transform-origin: left top;
+    transform-origin: left top;
+    -webkit-transform: scale(1, 1);
+    -ms-transform: scale(1, 1);
+    transform: scale(1, 1)
+  }
+  
+  .btn2{
+    text-transform: uppercase;
+    text-align: center;
+    position: relative;
+    text-decoration: none;
+    display:inline-block;
+    border-bottom: 2px solid #3367ff;
+  
+  }
 
 .backimg{
     position: relative;
+    top: 10px;
 }
 
 .backimg h1{
@@ -18,17 +94,8 @@ body{
     top: 0;
     left: 20px;
     width        : 95%;
-    height       : 85%;
+    height       : 95%;
     background-color: rgba(211, 211, 211, 0.39);
-}
-
-.backimg p{
-    position: absolute;
-    color: black;
-    font-size: 24px;
-    word-wrap: break-word;
-    top: 40px;
-    left: 40px;
 }
 
 .backimg img{
@@ -37,10 +104,12 @@ body{
     filter: blur(6px);
 }
 
-.main{
-    color: white;
-}
-
-footer{
-    color: white;
+.backimg div{
+    position: absolute;
+    color: black;
+    top:55px;
+    left:20px;
+    width: 95%;
+    height: 90%;
+    overflow: scroll;
 }
